Adding new bg and images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								As a lifelong student, Ysa grows by collaborating with people that continually challenge her to acquire new skills as well as advance her current skill set. She is a kinesthetic learner who enjoys working with her hands and thrives in a highly innovative, fast-paced environment that feeds her creative and technical side while providing day-to-day engineering opportunities.
 								Because she grew up in a developing country, Ysa is inspired to help create solutions that improve the human condition and understands the importance of using science, technology, and engineering to accomplish this goal. She hopes to one day make her mark in the development of both hardware and software engineering of emerging technologies such as Internet of Things (IoT) devices. As someone who continues to further her own education, Ysa would love to give back to the community and inspire other young women in the Philippines to pursue STEM careers. <br /><br />
 
-								Ysa is at the end of her journey into becoming a full-fledged full stack developer through the flex program of the University of Texas at Austin. She has developed <a href="#work">web applications</a> that includes a word-guessing game, a user-friendly public transportation scheduler, and a tool that checks and alerts users of the allergens and additives of food products.
+								Ysa is at the end of her journey into becoming a full-fledged full stack developer through the flex program of the University of Texas at Austin. She has developed <a href="https://tanysaur.github.io/personal-profile/#work">web applications</a> that includes a word-guessing game, a user-friendly public transportation scheduler, and a tool that checks and alerts users of the allergens and additives of food products.
 
 								<br /><br />
 								Ysa obtained her undergraduate degree of a Bachelor of Science in Computer Engineering at the University of Minnesota-Twin Cities in 2012 and was an active member of the Institute of Electrical and Electronics Engineers organization while in college. She received her Project Management certification with the University of Houston in 2016 as she aspires to hone and balance both technical and soft skills.
@@ -99,9 +99,9 @@
 											</p>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="#" target="_blank" class="image fit"><img src="images/pic10.jpg" alt="hangman"></a>
+											<a href="https://crappybirdz.herokuapp.com/" target="_blank" class="image fit"><img src="images/crappyBirdz.png" alt="crappy-birdz"></a>
 											<p>
-												<strong>BattleShips</strong> LeapMotionJS (In-progress) | <a href="#" target="_blank">GitHub</a>
+												<strong>Crappy Birdz</strong> an interactive game using Leap Motion's VR / AR technology' | <a href="https://github.com/tanysaur/crappy-Boiler" target="_blank">GitHub</a>
 											</p>
 										</div>
 									</div>
