Re-arranged tiles in /work

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 				</header>
 
-				<a href="#work" class="jumplink pic">
+				<a href="#bio" class="jumplink pic">
 					<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
 					<img src="images/ysa_ny.jpg" alt="" />
 				</a>
@@ -173,19 +173,20 @@
 							</p>
 						</div>
 						<div class="4u 12u$(mobile)">
+							<a href="https://crappybirdz.herokuapp.com/" target="_blank" class="image fit"><img src="images/crappyBirdz.png" alt="crappy-birdz"></a>
+							<p>
+								<strong>Crappy Birdz</strong> an interactive game using Leap Motion's VR / AR technology | <a href="https://github.com/tanysaur/crappy-Boiler"
+								 target="_blank">GitHub</a>
+							</p>
+						</div>
+						<div class="4u 12u$(mobile)">
 							<a href="https://neigborrnt.herokuapp.com/" target="_blank" class="image fit"><img src="images/neighborentals.png" alt="neighborentals"></a>
 							<p>
 								<strong>NeighboRentals</strong> is a digital platform where people can lend and rent items as an effort toreduce
 								overall carbon footprint while also earning money. | <a href="https://github.com/tanysaur/neighbor_rentals" target="_blank">GitHub</a>
 							</p>
 						</div>
-						<div class="4u 12u$(mobile)">
-							<a href="https://crappybirdz.herokuapp.com/" target="_blank" class="image fit"><img src="images/crappyBirdz.png" alt="crappy-birdz"></a>
-							<p>
-								<strong>Crappy Birdz</strong> an interactive game using Leap Motion's VR / AR technology' | <a href="https://github.com/tanysaur/crappy-Boiler"
-								 target="_blank">GitHub</a>
-							</p>
-						</div>
+
 					</div>
 				</section>
 
@@ -205,28 +206,24 @@
 						<div class="4u 12u$(mobile)">
 							<a href="https://tanysaur-sushicollector.herokuapp.com/" target="_blank" class="image fit"><img src="images/sushi_collector.png" alt="sushi collector"></a>
 							<p>
-								<strong>Sushi collector</strong> | <a href="https://github.com/tanysaur/week-4-game" target="_blank">GitHub</a>
+								<strong>Sushi collector</strong> ­ an interactive web game that dynamically updates the HTML page with jQuery library.
+								Users collect sushi to start building their plate while ensuring that they do not go over their allocated budget,
+								or else... | <a href="https://github.com/tanysaur/week-4-game" target="_blank">GitHub</a>
 							</p>
 						</div>
 
 						<div class="4u 12u$(mobile)">
 							<a href="https://tanysaur-disney-giftastic.herokuapp.com/" target="_blank" class="image fit"><img src="images/giftastic.png" alt="giftastic"></a>
 							<p>
-								<strong>GifTastic</strong> Disney edition | <a href="https://github.com/tanysaur/GifTastic" target="_blank">GitHub</a>
+								<strong>GifTastic</strong> Disney edition. This app uses the GIPHY API that makes a dynamic web page that populates Disney gifs. | <a href="https://github.com/tanysaur/GifTastic" target="_blank">GitHub</a>
 							</p>
 						</div>
 					</div>
 
 					<div class="row">
 
+						
 
-
-						<div class="4u 12u$(mobile)">
-							<a href="https://tanysaur-nyt-react.herokuapp.com/" target="_blank" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-							<p>
-								<strong>NY Times React app</strong> (In-progress) | <a href="https://github.com/tanysaur/NYT-React" target="_blank">GitHub</a>
-							</p>
-						</div>
 						<div class="4u 12u$(mobile)">
 							<a href="https://tanysaur-triviagame.herokuapp.com/" target="_blank" class="image fit"><img src="images/trivia_game.png" alt="trivia game doctor who edition"></a>
 							<p>
@@ -237,6 +234,13 @@
 							<a href="https://newspaper-scraper.herokuapp.com/" target="_blank" class="image fit"><img src="images/newspaper_scraper.png" alt="newspaper scraper"></a>
 							<p>
 								<strong>News Paper Scraper</strong> Huffington Post's Comedy Section | <a href="https://github.com/tanysaur/paper-scraper"
+								 target="_blank">GitHub</a>
+							</p>
+						</div>
+						<div class="4u$ 12u$(mobile)">
+							<a href="https://tanysaur-bootstrap-portfolio.herokuapp.com/" target="_blank" class="image fit"><img src="images/bootstrap-portfolio.png" alt="bootstrap portfolio"></a>
+							<p>
+								<strong>Bootstrap Portfolio</strong> a basic portfolio using the Bootstrap framework. | <a href="https://github.com/tanysaur/Basic-Portfolio"
 								 target="_blank">GitHub</a>
 							</p>
 						</div>
@@ -274,12 +278,7 @@
 								<strong>Basic Portfolio</strong> using HTML + CSS | <a href="https://github.com/tanysaur/Basic-Portfolio" target="_blank">GitHub</a>
 							</p>
 						</div>
-						<div class="4u 12u$(mobile)">
-							<a href="https://tanysaur-eat-da-burger.herokuapp.com/" target="_blank" class="image fit"><img src="images/pic11.jpg" alt="sequelize burger"></a>
-							<p>
-								<strong>Burgers</strong> using Sequelize (In-progress) | <a href="https://github.com/tanysaur/burger" target="_blank">GitHub</a>
-							</p>
-						</div>
+
 						<div class="4u 12u$(mobile)">
 							<a href="https://tanysaur-wireframe.herokuapp.com/" target="_blank" class="image fit"><img src="images/wireframe.png" alt="basic wireframe"></a>
 							<p>
@@ -287,18 +286,34 @@
 								 target="_blank">GitHub</a>
 							</p>
 						</div>
-
-						<div class="row">
-
-							<div class="4u$ 12u$(mobile)">
-								<a href="https://tanysaur-bootstrap-portfolio.herokuapp.com/" target="_blank" class="image fit"><img src="images/bootstrap-portfolio.png" alt="bootstrap portfolio"></a>
-								<p>
-									<strong>Bootstrap Portfolio</strong> a basic portfolio using the Bootstrap framework. | <a href="https://github.com/tanysaur/Basic-Portfolio"
-									 target="_blank">GitHub</a>
-								</p>
-							</div>
-						</div>
+					</div>
 				</section>
+
+
+				<section>
+					<h3>Work in progress</h3>
+					<hr>
+					<div class="row">
+
+						<div class="4u 12u$(mobile)">
+							<a href="https://tanysaur-nyt-react.herokuapp.com/" target="_blank" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+							<p>
+								<strong>NY Times React app</strong> (In-progress) | <a href="https://github.com/tanysaur/NYT-React" target="_blank">GitHub</a>
+							</p>
+						</div>
+
+
+
+						<div class="4u 12u$(mobile)">
+							<a href="https://tanysaur-eat-da-burger.herokuapp.com/" target="_blank" class="image fit"><img src="images/pic11.jpg" alt="sequelize burger"></a>
+							<p>
+								<strong>Burgers</strong> using Sequelize (In-progress) | <a href="https://github.com/tanysaur/burger" target="_blank">GitHub</a>
+							</p>
+						</div>
+					</div>
+				</section>
+
+
 			</article>
 
 
@@ -307,7 +322,9 @@
 				<p>
 					You can download my resume by clicking on the pop-out in the top right corner.
 				</p>
-				<iframe src="https://drive.google.com/file/d/0B9ohCYuVymMhd1RPNFR1UDUyUFE/preview" width="800" height="500"></iframe>
+				<iframe src="https://drive.google.com/file/d/0B9ohCYuVymMhdUpRckdBc202VjA/preview" width="800" height="500"></iframe>
+
+
 				<!-- <a href="#resume" class="jimplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my resume</span></span>
 								</a> -->
@@ -320,25 +337,25 @@
 				 width="800" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 			</article>
 
-			</div>
-
-			<!-- Footer -->
-			<div id="footer">
-				<ul class="copyright">
-					<li>&copy; 2017 Ysa Tan</li>
-					<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-				</ul>
-			</div>
-
 		</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/skel-viewport.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<div id="footer">
+			<ul class="copyright">
+				<li>&copy; 2017 Ysa Tan</li>
+				<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+			</ul>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/skel-viewport.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
 </body>
 
